--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ coverage = "^5.5"
 Sphinx = "^4.1.0"
 sphinx-material = "^0.0.34"
 pre-commit = "^2.14.0"
+tbump = "^6.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
