--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+      - run: apt-get update
+      - run: apt-get install libxml2-dev libxslt1-dev python-dev
       - name: Setup Poetry
         run: pip install poetry
       - name: Install
