--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,11 +19,13 @@ jobs:
         run: poetry install
       - name: Build
         run: poetry build
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - run: ls -l
+      - name: Get wheel file
+        id: filename
+        run: ls ./dist/*.whl
       - name: Get version
         id: version
-        run: ls ./dist/*.whl | awk -F "-" '{print $2}'
+        run: echo "${{ steps.filename.outputs.filename }}" | awk -F "-" '{print $2}'
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -42,4 +44,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: ./dist/*.whl
+          asset_name: aws_cfn_custom_resource_resolve_parser-py3-none-any.whl
           asset_content_type: application/zip
