--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
         run: ls ./dist/*.whl
       - name: Get version
         id: version
-        run: echo "${{ steps.filename.outputs.filename }}" | awk -F "-" '{print $2}'
+        run: echo "${{ steps.filename.outputs.stdout }}" | awk -F "-" '{print $2}'
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -33,7 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.version.outputs.version}}
+          release_name: Release ${{ steps.version.outputs.stdout }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
